--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@ Smartphone Compatible web template, free web designs for Nokia, Samsung, LG, Son
 <!-- banner -->
 	<div class="banner">
 			<!--Slider-->
-			<img src="images/pic2.jpg" alt=" " class="img-responsive">
-					<h2>I'M John McCoist</h2>
-					<span>PROGRAMMER / WEB DEVELOPER</span>
+			<img src="images/top-pic.jpg" alt=" " class="img-responsive">
+					<h2>I'm Pradyoth Hegde</h2>
+					<span>ENGINEER / MACHINE LEARNING ENTHUSIAST</span>
 				<div class="callbacks_container">
 					<ul class="rslides" id="slider3">
 						<li>
