--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ Smartphone Compatible web template, free web designs for Nokia, Samsung, LG, Son
 <!-- banner -->
 	<div class="banner">
 			<!--Slider-->
-			<img src="images/top-pic.jpg" alt=" " class="img-responsive">
+			<img src="images/top.jpg" alt=" " class="img-responsive">
 					<h2>I'm Pradyoth Hegde</h2>
 					<span>ENGINEER / MACHINE LEARNING ENTHUSIAST</span>
 				<div class="callbacks_container">
