--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ Smartphone Compatible web template, free web designs for Nokia, Samsung, LG, Son
 					</div>
 					<div class="w3ls-agile-left-info">
 						<h4>Name</h4>
-						<p>John Mccoist</p>
+						<p>Pradyoth Hegde</p>
 					</div>
 					<div class="w3ls-agile-left-info">
 						<h4>Sex</h4>
@@ -139,11 +139,11 @@ Smartphone Compatible web template, free web designs for Nokia, Samsung, LG, Son
 					</div>
 					<div class="w3ls-agile-left-info">
 						<h4>Address</h4>
-						<p> 30, Golden Street, New Castle</p>
+						<p> 1516 Central Street, Apt FF2, Evanston, IL - 60201</p>
 					</div>
 					<div class="w3ls-agile-left-info">
 						<h4>Email Address</h4>
-						<p><a href="mailto:example@email.com">mail@example.com</a></p>
+						<p><a href="mailto:pradyothhegde2018@u.northwestern.edu">pradyothhegde2018@u.northwestern.edu</a></p>
 					</div>
 				</div>
 				<div class="clearfix"> </div>
