--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Classy Resume a Personal Category Bootstrap Responsive Website Template | Home :: w3layouts</title>
+<title>Pradyoth's WebPage</title>
 <!-- for-mobile-apps -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -69,9 +69,9 @@ Smartphone Compatible web template, free web designs for Nokia, Samsung, LG, Son
 		</div>
 		<!--//Slider-->
 					<ul class="top-links">
-									<li><a href="#"><i class="fa fa-facebook"></i></a></li>
+									<li><a href="https://www.facebook.com/pradyoth"><i class="fa fa-facebook"></i></a></li>
 									<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-									<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+									<li><a href="https://www.linkedin.com/in/pradyoth-hegde-2a3431b0/"><i class="fa fa-linkedin"></i></a></li>
 									<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
 								</ul>
 	</div>
@@ -127,7 +127,7 @@ Smartphone Compatible web template, free web designs for Nokia, Samsung, LG, Son
 				<div class="col-md-7 w3ls-agile-left">
 					<div class="w3ls-agile-left-info">
 						<h4>Job Title</h4>
-						<p>Programmer / Web Developer</p>
+						<p>Computer Programmer</p>
 					</div>
 					<div class="w3ls-agile-left-info">
 						<h4>Name</h4>
